--- a/website/aci.erb
+++ b/website/aci.erb
@@ -165,6 +165,9 @@
                       <li<%= sidebar_current("docs-aci-data-source-firmware_policy") %>>
                         <a href="/docs/providers/aci/d/firmware_policy.html">aci_firmware_policy</a>
                       </li>
+                      <li<%= sidebar_current("docs-aci-data-source-function_node") %>>
+                        <a href="/docs/providers/aci/d/data_source_vnsabsnode.html">aci_function_node</a>
+                      </li>
                       <li<%= sidebar_current("docs-aci-data-source-imported_contract") %>>
                         <a href="/docs/providers/aci/d/imported_contract.html">aci_imported_contract</a>
                       </li>
@@ -461,6 +464,9 @@
                       </li>
                       <li<%= sidebar_current("docs-aci-resource-firmware_policy") %>>
                         <a href="/docs/providers/aci/r/firmware_policy.html">aci_firmware_policy</a>
+                      </li>
+                      <li<%= sidebar_current("docs-aci-resource-function_node") %>>
+                        <a href="/docs/providers/aci/r/vnsabsnode.html">aci_function_node</a>
                       </li>
                       <li<%= sidebar_current("docs-aci-resource-imported_contract") %>>
                         <a href="/docs/providers/aci/r/imported_contract.html">aci_imported_contract</a>
